// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullScreenLoader Snapshots Messages 1`] = `
<div
  className="sc-AxgMl iKPYEv"
>
  <div
    className="sc-AxirZ jMKBgx"
  >
    <div
      className="sc-AxjAm icExq"
    />
    <div
      className="sc-AxiKw kTArkf"
    />
  </div>
</div>
`;

exports[`FullScreenLoader Snapshots Multiple words 1`] = `
<div
  className="sc-AxgMl iKPYEv"
>
  <div
    className="sc-AxirZ jMKBgx"
  >
    <div
      className="sc-AxjAm icExq"
    />
    <div
      className="sc-AxiKw kTArkf"
    >
      <div
        className="sc-AxhUy cISrBP"
      >
        hei
      </div>
    </div>
  </div>
</div>
`;

exports[`FullScreenLoader Snapshots invalid Messages 1`] = `
<div
  className="sc-AxgMl iKPYEv"
>
  <div
    className="sc-AxirZ jMKBgx"
  >
    <div
      className="sc-AxjAm icExq"
    />
    <div
      className="sc-AxiKw kTArkf"
    />
  </div>
</div>
`;
